--- a/style.css
+++ b/style.css
@@ -147,7 +147,7 @@ body {
 }
 
 @media screen and (max-width:600px) {
- 
+    
     body{
         display: flex;
         justify-content: center;
@@ -165,6 +165,18 @@ body {
     width: 100%;
 }
 .vista{
-    transform: translate(20px, -39px);
+    transform: translate(250px, -66px);
+    
 }
 }
+@media screen and (max-width:600px) {
+        
+    .vista{
+        transform: translate(20px, -40px);
+        
+    }
+    
+    
+    
+    
+    }
